web/book/tests/snapshots/snapshot__tests__prql__language-features__ranges-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from orders\nsort [-value, created_at]\ntake 101..110\n"
---
SELECT
  *
FROM
  orders
ORDER BY
  value DESC,
  created_at
LIMIT
  10 OFFSET 100

