web/book/tests/snapshots/snapshot__tests__prql__language-features__regex-0.prql.snap
---
source: web/book/tests/snapshot.rs
expression: "from artists\nfilter (name ~= \"Martin\")\n"
---
SELECT
  *
FROM
  artists
WHERE
  REGEXP(name, 'Martin')

