web/book/tests/snapshots/snapshot__tests__prql__language-features__regex-1.prql.snap
---
source: web/book/tests/snapshot.rs
expression: "prql target:sql.duckdb\n\nfrom artists\nfilter (name ~= \"Martin\")\n"
---
SELECT
  *
FROM
  artists
WHERE
  REGEXP_MATCHES(name, 'Martin')

