web/book/tests/snapshots/snapshot__tests__prql__language-features__s-strings-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from my_table\nselect db_version = s\"version()\"\n"
---
SELECT
  version() AS db_version
FROM
  my_table

