web/book/tests/snapshots/snapshot__tests__prql__language-features__s-strings-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\naggregate [average salary]\n"
---
SELECT
  AVG(salary)
FROM
  employees

