web/book/tests/snapshots/snapshot__tests__prql__language-features__s-strings-5.prql.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nderive [\n  gross_salary = salary + benefits,\n  daily_rate = s\"{gross_salary} / 365\"\n]\n"
---
SELECT
  *,
  salary + benefits AS gross_salary,
  salary + benefits  / 365 AS daily_rate
FROM
  employees

