web/book/tests/snapshots/snapshot__tests__prql__language-features__strings-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from my_table\nselect x = '\"hello world\"'\n"
---
SELECT
  '"hello world"' AS x
FROM
  my_table

